--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^5.3.5",
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.15.4",
+    "immer": "^10.0.4",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
